--- a/app/src/main/res/drawable/background_button_pink.xml
+++ b/app/src/main/res/drawable/background_button_pink.xml
@@ -1,9 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
-    <corners
-        android:radius="5dp"
-        />
-    <solid
-        android:color="#F4B9C1"
-        />
-</shape> 
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <!-- most important is order of layers -->
+
+    <!-- Bottom 2dp Shadow -->
+    <item android:left="1dp" android:right="1dp">
+        <shape android:shape="rectangle">
+            <gradient
+                android:startColor="#33000000"
+                android:endColor="#00000000"
+                android:angle="90"/>
+            <corners
+                android:radius="8dp"/>
+        </shape>
+    </item>
+
+    <!-- White Top color -->
+    <item android:bottom="4dp" >
+        <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
+            <corners
+                android:radius="7dp"
+                />
+            <solid
+                android:color="#F4B9C1"
+                />
+        </shape>
+    </item>
+</layer-list>
+
+
+
