--- a/app/src/main/res/drawable/background_input_text_login_shadow.xml
+++ b/app/src/main/res/drawable/background_input_text_login_shadow.xml
@@ -4,11 +4,11 @@
     <!-- most important is order of layers -->
 
     <!-- Bottom 2dp Shadow -->
-    <item>
+    <item android:left="1dp" android:right="1dp">
         <shape android:shape="rectangle">
             <gradient
                 android:startColor="#33000000"
-                android:endColor="#10ffffff"
+                android:endColor="#00000000"
                 android:angle="90"/>
             <corners
                 android:radius="8dp"/>
@@ -16,15 +16,15 @@
     </item>
 
     <!-- White Top color -->
-    <item android:bottom="3dp" android:right="3dp" android:left="3dp">
+    <item android:bottom="4dp">
         <shape xmlns:android="http://schemas.android.com/apk/res/android"
             android:shape="rectangle">
 
             <solid android:color="#FFFFFF"/>
 
             <stroke
-                android:width="2dp"
-                android:color="#c9837f" />
+                android:width="1dp"
+                android:color="#f36d56" />
 
             <corners
                 android:radius="5dp"/>
@@ -32,4 +32,17 @@
         </shape>
     </item>
 </layer-list>
+
+<!-- old shadow
+<item>
+<shape android:shape="rectangle">
+    <gradient
+        android:startColor="#33000000"
+        android:endColor="#10ffffff"
+        android:angle="90"/>
+    <corners
+        android:radius="8dp"/>
+</shape>
+</item>
+-->
 
