--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -57,7 +57,7 @@
                                 android:inputType="textEmailAddress"
                                 android:layout_width="match_parent"
                                 android:layout_height="40dp"
-                                android:hint="Email address"
+                                android:hint="@string/englishHintEmail"
                                 android:textSize="@dimen/inpuStringSize"
                                 android:background="@drawable/background_input_text_login_shadow"
                                 android:paddingStart="@dimen/verticalInputPadding"
@@ -68,7 +68,7 @@
                                 android:inputType="textPassword"
                                 android:layout_width="match_parent"
                                 android:layout_height="40dp"
-                                android:hint="Password"
+                                android:hint="@string/englishHintPassword"
                                 android:textStyle="normal"
                                 android:textSize="@dimen/inpuStringSize"
                                 android:background="@drawable/background_input_text_login_shadow"
@@ -91,7 +91,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="login"
-            android:text="Login"
+            android:text="@string/loginLoginButton"
             android:padding="10dp"
             android:background="@drawable/background_button_green"/>
 
@@ -100,7 +100,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="changeToRegister"
-            android:text="Register Page"
+            android:text="@string/loginSingUpButton"
             android:padding="10dp"
             android:layout_margin="10dp"
             android:background="@drawable/background_button_pink"/>
