--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -10,8 +10,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="10"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
         <RelativeLayout
@@ -50,7 +49,7 @@
                             android:id="@+id/registerUserNameInput"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:hint="Username"
+                            android:hint="@string/englishHintUsername"
                             android:textSize="@dimen/inpuStringSize"
                             android:background="@drawable/background_input_text_login_shadow"
                             android:paddingStart="@dimen/verticalInputPadding"
@@ -62,7 +61,7 @@
                             android:inputType="textEmailAddress"
                             android:layout_width="match_parent"
                             android:layout_height="40dp"
-                            android:hint="Email address"
+                            android:hint="@string/englishHintEmail"
                             android:textSize="@dimen/inpuStringSize"
                             android:background="@drawable/background_input_text_login_shadow"
                             android:paddingStart="@dimen/verticalInputPadding"
@@ -73,7 +72,7 @@
                             android:id="@+id/registerPhoneNumberInput"
                             android:layout_width="match_parent"
                             android:layout_height="40dp"
-                            android:hint="Phone number"
+                            android:hint="@string/englishHintPhoneNumber"
                             android:textSize="@dimen/inpuStringSize"
                             android:background="@drawable/background_input_text_login_shadow"
                             android:paddingStart="@dimen/verticalInputPadding"
@@ -85,10 +84,9 @@
                             android:inputType="textPassword"
                             android:layout_width="match_parent"
                             android:layout_height="40dp"
-                            android:hint="Password"
+                            android:hint="@string/englishHintPassword"
                             android:textSize="@dimen/inpuStringSize"
                             android:textStyle="normal"
-                            android:textFontWeight="100"
                             android:background="@drawable/background_input_text_login_shadow"
                             android:paddingStart="@dimen/verticalInputPadding"
                             android:paddingEnd="@dimen/verticalInputPadding"
@@ -99,7 +97,7 @@
                             android:inputType="textPassword"
                             android:layout_width="match_parent"
                             android:layout_height="40dp"
-                            android:hint="Password confirmation"
+                            android:hint="@string/englishHintPasswordConfirmation"
                             android:textSize="@dimen/inpuStringSize"
                             android:background="@drawable/background_input_text_login_shadow"
                             android:paddingStart="@dimen/verticalInputPadding"
@@ -115,21 +113,21 @@
 
                             <Button
                                 android:id="@+id/registerRegisterButton"
+                                android:onClick="register"
+                                android:text="@string/registerRegisterButton"
                                 android:background="@drawable/background_button_green"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginHorizontal="10dp"
-                                android:onClick="register"
-                                android:text="Register" />
+                                android:layout_marginEnd="@dimen/verticalInputPadding"/>
 
                             <Button
                                 android:id="@+id/registerCancelButton"
+                                android:onClick="register"
+                                android:text="@string/registerCancelButton"
                                 android:background="@drawable/background_button_pink"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginHorizontal="10dp"
-                                android:onClick="register"
-                                android:text="cancel" />
+                                android:layout_marginStart="@dimen/verticalInputPadding"/>
                         </LinearLayout>
                     </LinearLayout>
                 </RelativeLayout>
