--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -46,6 +46,7 @@
                         android:orientation="vertical">
                         <EditText
                             android:id="@+id/registerUserNameInput"
+                            android:inputType="textVisiblePassword"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:hint="@string/englishHintUsername"
@@ -69,6 +70,7 @@
                             android:paddingTop="@dimen/verticalInputPadding"/>
                         <EditText
                             android:id="@+id/registerPhoneNumberInput"
+                            android:inputType="phone"
                             android:layout_width="match_parent"
                             android:layout_height="40dp"
                             android:hint="@string/englishHintPhoneNumber"
