--- a/app/src/main/res/layout/fragment_profile_card_view.xml
+++ b/app/src/main/res/layout/fragment_profile_card_view.xml
@@ -4,16 +4,96 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/bottomSheet"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="@dimen/profileCardVewHeight"
+    android:background="@drawable/background_profile_card_view"
     android:orientation="vertical"
     app:behavior_hideable="true"
     app:behavior_peekHeight="80dp"
     app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
-
-        <androidx.cardview.widget.CardView
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="325dp"
-            app:cardCornerRadius="20dp">
-
-        </androidx.cardview.widget.CardView>
+            android:layout_height="match_parent"
+            android:gravity="center_horizontal"
+            android:layout_margin="@dimen/profileCardViewMargin"
+            android:orientation="vertical">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/cardview_hook"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/profileCardViewMargin"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginEnd="5dp"
+                    android:padding="@dimen/profileCardViewPadding"
+                    android:background="@color/cardViewProfileBg"
+                    android:gravity="center_horizontal"
+                    android:orientation="vertical">
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="0dp"
+                            android:layout_weight="6"
+                            android:src="@drawable/main_logo" />
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="0dp"
+                            android:layout_weight="2.5"
+                            android:layout_marginTop="10dp"
+                            android:layout_marginBottom="10dp"
+                            android:gravity="center_horizontal"
+                            android:orientation="vertical">
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:textColor="@color/colorGreenDefault"
+                                    android:textStyle="bold"
+                                    android:textSize="22sp"
+                                    android:text="@string/profileDefaultUsername"/>
+                                <LinearLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:gravity="center_horizontal"
+                                    android:orientation="horizontal">
+                                        <TextView
+                                            android:layout_width="wrap_content"
+                                            android:layout_height="wrap_content"
+                                            android:textColor="@color/colorGreenDefault"
+                                            android:textStyle="italic"
+                                            android:textSize="@dimen/textViewDefault"
+                                            android:text="@string/profileDefaultAge"/>
+                                        <TextView
+                                            android:layout_width="wrap_content"
+                                            android:layout_height="wrap_content"
+                                            android:textColor="@color/colorGreenDefault"
+                                            android:textStyle="italic"
+                                            android:textSize="@dimen/textViewDefault"
+                                            android:text="@string/profileGenderMale"/>
+                                </LinearLayout>
+                        </LinearLayout>
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="0dp"
+                            android:layout_weight="5">
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:textColor="@color/cardViewProfileDescription"
+                                    android:textStyle="italic"
+                                    android:textSize="@dimen/textViewDefault"
+                                    android:text="@string/profileDefaultDescription"/>
+                        </RelativeLayout>
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="0dp"
+                            android:layout_weight="2"
+                            android:gravity="center">
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="Current point is:"
+                                    android:textColor="@color/cardViewProfilePointString"/>
+                        </RelativeLayout>
+                </LinearLayout>
+        </LinearLayout>
 </LinearLayout>
