--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -128,7 +128,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginHorizontal="10dp"
-                                android:onClick="register"
+                                android:onClick="cancel"
                                 android:text="cancel" />
                         </LinearLayout>
                     </LinearLayout>
