attempt to change avatar, sets users photoURL in authenticate (firebase) but does not display avatar correctly, kevin to try and fix

--- a/app/src/main/res/layout/fragment_profile_card_view.xml
+++ b/app/src/main/res/layout/fragment_profile_card_view.xml
@@ -30,7 +30,9 @@
                     android:background="@color/cardViewProfileBg"
                     android:gravity="center_horizontal"
                     android:orientation="vertical">
+
                         <ImageView
+                            android:id="@+id/avatarImageView"
                             android:layout_width="match_parent"
                             android:layout_height="0dp"
                             android:layout_weight="6"
