--- a/app/src/main/res/layout/fragment_profile_card_view.xml
+++ b/app/src/main/res/layout/fragment_profile_card_view.xml
@@ -22,7 +22,7 @@
                     android:src="@drawable/cardview_hook"/>
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_marginTop="@dimen/profileCardViewMargin"
                     android:layout_marginStart="5dp"
                     android:layout_marginEnd="5dp"
@@ -30,17 +30,21 @@
                     android:background="@color/cardViewProfileBg"
                     android:gravity="center_horizontal"
                     android:orientation="vertical">
-
-                        <ImageView
-                            android:id="@+id/avatarImageView"
-                            android:layout_width="match_parent"
-                            android:layout_height="0dp"
-                            android:layout_weight="6"
-                            android:src="@drawable/main_logo" />
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="0dp"
-                            android:layout_weight="2.5"
+                            android:layout_weight="6"
+                            android:gravity="center_horizontal">
+                                <ImageView
+                                    android:id="@+id/avatarImageView"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="match_parent"
+                                    android:src="@drawable/avatar_default" />
+                        </LinearLayout>
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="0dp"
+                            android:layout_weight="2.8"
                             android:layout_marginTop="10dp"
                             android:layout_marginBottom="10dp"
                             android:gravity="center_horizontal"
@@ -76,7 +80,7 @@
                         <RelativeLayout
                             android:layout_width="match_parent"
                             android:layout_height="0dp"
-                            android:layout_weight="5">
+                            android:layout_weight="5.5">
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
