cleaning some of dan's code - not done yet register now will randomly assign user with random profile picture out of 5 add app bar, and updates style res value to not have app bar to have custom app bar that have custom menu bar that have sign out method sing out method is made - already made sure user cant go back to previous activity after logged out

--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -7,14 +7,23 @@
     tools:context=".MapsActivity"
     android:orientation="vertical">
 
-    <!-- include main content -->
-    <fragment
-        android:id="@+id/map"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <!-- include bottom sheet -->
+        <include
+            layout="@layout/app_bar_layout"
+            android:id="@+id/maps_toolbar">
+        </include>
+
+        <fragment
+            android:id="@+id/map"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </LinearLayout>
+
     <include
         layout="@layout/fragment_profile_card_view"
         android:id="@+id/mapBottomSheet"/>
