map -> bugs fixed profile map -> bio set a default bio for everyone in register activity map -> Cicle color changed user model updated with bio and profile url

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="colorTextInput">#000000</color>
     <color name="colorGreenDefault">#5BACA3</color>
     <color name="colorPinkDefault">#F4B9C1</color>
+    <color name="colorBlueCricle">#4c8bf5</color>
 
     <!-- profile -->
     <color name="cardViewDefaultBg">#FAFAFA</color>
