Register -> add default gender and age Register -> Create account will bring user to home and profile setup page Profile setup -> change information (bio age and gender) for now everything will need to be change Profile setup TO_DO -> show the current information and able to change some but not all Map -> show updated infomation (gender and age)

--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -6,4 +6,9 @@
         android:id="@+id/main_logout_button"
         app:showAsAction="never">
     </item>
+
+    <item android:title="Profile edit"
+        android:id="@+id/main_profile_edit_button"
+        app:showAsAction="never">
+    </item>
 </menu>
