--- a/app/src/main/res/layout/fragment_profile_card_view.xml
+++ b/app/src/main/res/layout/fragment_profile_card_view.xml
@@ -63,6 +63,14 @@
                                     android:gravity="center_horizontal"
                                     android:orientation="horizontal">
                                         <TextView
+                                            android:id="@+id/profileAgeInfo"
+                                            android:layout_width="wrap_content"
+                                            android:layout_height="wrap_content"
+                                            android:textColor="@color/colorGreenDefault"
+                                            android:textStyle="italic"
+                                            android:textSize="@dimen/textViewDefault"
+                                            android:text="21"/>
+                                        <TextView
                                             android:layout_width="wrap_content"
                                             android:layout_height="wrap_content"
                                             android:textColor="@color/colorGreenDefault"
@@ -70,6 +78,7 @@
                                             android:textSize="@dimen/textViewDefault"
                                             android:text="@string/profileDefaultAge"/>
                                         <TextView
+                                            android:id="@+id/profileGenderInfo"
                                             android:layout_width="wrap_content"
                                             android:layout_height="wrap_content"
                                             android:textColor="@color/colorGreenDefault"
