instead of 'describe yourself', About me Gender writing in white instead of black -Card pull up have one background colour - Just number of for age - Just M or F for gender - only Number of points Options in order of Edit Profile Logout

--- a/app/src/main/res/drawable/background_profile_card_view.xml
+++ b/app/src/main/res/drawable/background_profile_card_view.xml
@@ -3,5 +3,5 @@
     <corners android:radius="1dp"
         android:topLeftRadius="20dp"
         android:topRightRadius="20dp"/>
-    <solid android:color="@color/cardViewDefaultBg" />
+    <solid android:color="@color/white" />
 </shape>
