--- a/app/src/main/res/layout/activity_profile_setup.xml
+++ b/app/src/main/res/layout/activity_profile_setup.xml
@@ -82,14 +82,18 @@
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
-                                android:text="@string/profileGenderMale"/>
+                                android:text="@string/profileGenderMale"
+                                android:textColor="@color/white"
+                                android:buttonTint="@color/white"/>
 
                             <RadioButton
                                 android:id="@+id/profileSetupRadioFemaleRadioButton"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
-                                android:text="@string/profileGenderFemale"/>
+                                android:text="@string/profileGenderFemale"
+                                android:textColor="@color/white"
+                                android:buttonTint="@color/white"/>
                         </RadioGroup>
 
                         <LinearLayout
