--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,7 @@
     <color name="cardViewProfileBg">#FFFFFF</color>
     <color name="cardViewProfileDescription">#50000000</color>
     <color name="cardViewProfilePointString">#FF7A7A</color>
+
+    <!-- normal color codes -->
+    <color name="white">#ffffff</color>
 </resources>
