make a new chat activity that is called with otherusertobeshawn object passed to it from map activity new chat activity also have a layout and message text view xml, added 2 backgroud for the message bubbles one for sending one for receiving add some value for color (message bubbles) and string (db key for chats) updated user model chat activity now can show messages array of map from firebase  TODO: QR and Send message

--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -35,7 +35,8 @@
         android:layout_margin="16dp"
         android:src="@drawable/message_icon"
         app:fabSize="auto"
-        android:visibility="gone"/>
+        android:visibility="gone"
+        android:onClick="startChat"/>
 
     <include
         layout="@layout/fragment_profile_card_view"
