--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -13,9 +13,14 @@
 
         <include
             layout="@layout/app_bar_layout"
-            android:id="@+id/maps_toolbar">
+            android:id="@+id/chat_toolbar">
         </include>
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/chatRecyclerView"
+            android:scrollbars="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
 
     </LinearLayout>
 
