--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,13 @@
     <color name="cardViewProfileDescription">#50000000</color>
     <color name="cardViewProfilePointString">#FF7A7A</color>
 
+
+    <!-- chat -->
+    <color name="otherMessageColor">#20000000</color>
+
     <!-- normal color codes -->
     <color name="white">#ffffff</color>
+    <color name="black">#000000</color>
+
+
 </resources>
