new chat system fixed some bugs

--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -40,7 +40,7 @@
 
             <MultiAutoCompleteTextView
                 android:background="@drawable/background_input_chat"
-                android:id="@+id/chatActivityMessageTextView"
+                android:id="@+id/chatInputMessage"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="8"
