add 2 new button and show not only name in toolbar chat but additional information (age and gender)

--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -13,8 +13,9 @@
         android:orientation="vertical">
 
         <include
-            layout="@layout/app_bar_layout"
+            layout="@layout/chat_app_bar_layout"
             android:id="@+id/chat_toolbar">
+
         </include>
 
         <androidx.recyclerview.widget.RecyclerView
