fix a bug when there is no message and try to go to the newest message in recycler view max conversation if reached will hide keyboard and show an icon

--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -26,18 +26,19 @@
             android:layout_weight="1"
             android:backgroundTint="@color/cardViewDefaultBg"/>
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:background="@android:color/darker_gray"/>
+
         <LinearLayout
-            android:paddingHorizontal="10dp"
-            android:paddingVertical="10dp"
-            android:id="@+id/test"
+            android:id="@+id/inputMessageLinearLayout"
             android:layout_width="match_parent"
             android:layout_height="65dp"
             android:gravity="center|bottom"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:visibility="visible">
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:background="@android:color/darker_gray"/>
 
             <MultiAutoCompleteTextView
                 android:background="@drawable/background_input_chat"
@@ -48,10 +49,23 @@
                 android:hint="Send message!"
                 android:paddingVertical="10dp"
                 android:paddingHorizontal="20dp"
+                android:layout_margin="10dp"
                 android:inputType="textCapSentences|textAutoCorrect"
-                android:imeOptions="actionSend"
-                />
+                android:imeOptions="actionSend"/>
+
         </LinearLayout>
 
+        <LinearLayout
+            android:id="@+id/maxMessagesIconLinearLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:visibility="gone">
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/max_conversation_check"
+                android:layout_margin="15dp"/>
+        </LinearLayout>
     </LinearLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
