--- a/app/src/main/res/layout/view_dialog_qr.xml
+++ b/app/src/main/res/layout/view_dialog_qr.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardCornerRadius="5dp">
     <ImageView
-        android:id="@+id/iv_qr"
+        android:id="@+id/qrCode"
         android:layout_width="300dp"
         android:layout_height="300dp"
         android:padding="12dp"
         android:src="@drawable/qr_button_white" />
 
-</RelativeLayout >
+</androidx.cardview.widget.CardView >
