reset password check if empty in all then input in register

--- a/app/src/main/res/layout/fragment_profile_card_view.xml
+++ b/app/src/main/res/layout/fragment_profile_card_view.xml
@@ -27,7 +27,7 @@
                     android:layout_marginStart="5dp"
                     android:layout_marginEnd="5dp"
                     android:padding="@dimen/profileCardViewPadding"
-                    android:background="@color/cardViewProfileBg"
+                    android:background="@color/cardViewDefaultBg"
                     android:gravity="center_horizontal"
                     android:orientation="vertical">
                         <LinearLayout
