--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -115,6 +115,19 @@
                                     android:layout_marginStart="7.5dp"
                                     android:background="@drawable/background_button_pink"/>
                             </LinearLayout>
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:orientation="vertical"
+                                android:gravity="bottom|center">
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="@string/loginResetPassword"
+                                    android:paddingVertical="10dp"
+                                    android:paddingHorizontal="20dp"
+                                    android:onClick="sendResetPassword"/>
+                            </LinearLayout>
                         </LinearLayout>
                     </RelativeLayout>
                     <RelativeLayout
